syntax = "proto3";

package org.github.skep.user;

option java_package = "org.github.skep.user";

option java_multiple_files = true;

service UserService {
  rpc getUserService(UserRequest) returns (UserResponse);
}

  message UserRequest {
    string username = 1;
  }

  message UserResponse {
    int32 id = 1;
    string username = 2;
    string name = 3;
    int32 age = 4;
    Gender gender = 5;
  }
  enum Gender {
    MALE = 0;
    FEMALE = 1;
    Other = 2;
  }